# oxidize

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  LIMITATIONS.md  README.md  TRANSLATION_REFERENCE.md  USER_GUIDE.md
.github/workflows/: ci.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: cache.rs  main.rs  scan.rs  source_map.rs
crates/codegen/: Cargo.toml
crates/codegen/src/: lib.rs
crates/ir/: Cargo.toml
crates/ir/src/: decl.rs  expr.rs  lib.rs  stmt.rs  types.rs
crates/ir/tests/: proptest_ir.proptest-regressions  proptest_ir.rs
crates/parser/: Cargo.toml
crates/parser/examples/: test_enum_parse.rs
crates/parser/src/: from_node.rs  lib.rs  walker.rs
crates/parser/tests/: ast_dump.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: array.rs  atomic.rs  bigdecimal.rs  bigint.rs  collections_util.rs  concurrent.rs  enum_map.rs  enum_set.rs  exception.rs  io.rs  iterator.rs  lib.rs  linked_hash_map.rs  linked_hash_set.rs  linked_list.rs  list.rs  map.rs  net.rs  object.rs  optional.rs  priority_queue.rs  process.rs  properties.rs  random.rs  reflect.rs  regex_support.rs  resource_bundle.rs  set.rs  spliterator.rs  stream.rs  string.rs  string_builder.rs  thread.rs  time.rs  timer.rs  tree_map.rs  tree_set.rs
crates/tests/: Cargo.toml
crates/tests/java/: AbstractClassTemplate.java  AnonCapture.java  AnonInnerClass.java  ArbitraryMonitor.java  Arithmetic.java  ArithmeticDouble.java  ArraysFill.java  ArraysSort.java  BigDecimalTest.java  BigIntegerTest.java  BoundMethodRef.java  BoxedConstants.java  BufferedReaderWriter.java  ByteArrayStreamTest.java  CharacterMethods.java  ClassLiteralTest.java  CollectionsExtra.java  CollectionsSort.java  CollectorsExtra.java  CollectorsToMapGroupingBy.java  CollectorsVariants.java  ColonPatternSwitch.java  ComparableImpl.java  ComparatorApi.java  CompletableFutureTest.java  ConcurrentHashMapTest.java  ControlFlow.java  CopyOnWriteArrayListTest.java  CsvParser.java  CustomException.java  DateTimeFormatterTest.java  DurationPeriodTest.java  EnumBasic.java  EnumCompare.java  EnumConstantBody.java  EnumFields.java  EnumInterface.java  EnumMapBasic.java  EnumMultipleConstructors.java  EnumSetBasic.java  (+99 more)
crates/tests/src/: lib.rs
crates/typeck/: Cargo.toml
crates/typeck/src/: lib.rs
fuzz/: Cargo.toml
fuzz/artifacts/fuzz_pipeline/: crash-7c0c95f1f6b755ee3f25dc6b868bd5d0551059ba
fuzz/corpus/fuzz_parser/: AnnotationBasic.java  Arithmetic.java  ArithmeticLong.java  BitwiseOps.java  DoWhileLoop.java  FizzBuzz.java  ForLoopSum.java  HashCodeConsistency.java  IsPrime.java  LocalDateTest.java  MapBasic.java  MaxMin.java  MultipleStaticMethods.java  NestedLoops.java  OopCounter.java  OopInheritance.java  OptionalTest.java  Recursion.java  RegexTest.java  ReverseInt.java  SemaphoreTest.java  StaticMethod.java  StringBuilderTest.java  StringConcat.java  StringPrimitiveConcat.java
fuzz/corpus/fuzz_pipeline/: AtomicCounter.java  BooleanOps.java  BreakContinue.java  Comparison.java  CompoundAssign.java  CountDownLatchTest.java  ExceptionNested.java  Fibonacci.java  ForLoop.java  GCD.java  GenericClass.java  IfElse.java  IntArray.java  OopInstanceof.java  OopInterface.java  Power.java  StreamTest.java  StringMethods.java  SynchronizedCounter.java  TernaryOp.java  ThrowsDecl.java
fuzz/fuzz_targets/: fuzz_parser.rs  fuzz_pipeline.rs
