[workspace]
resolver = "2"
members = [
    "crates/parser",
    "crates/ir",
    "crates/typeck",
    "crates/codegen",
    "crates/runtime",
    "crates/cli",
    "crates/tests",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["oxidize Contributors"]
license = "GPL-3.0-only"
repository = "https://github.com/YOUR_USERNAME/oxidize"

[workspace.dependencies]
# IR crate
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Rust code generation
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
prettyplease = "0.2"

# Java parsing
tree-sitter = "0.22"
tree-sitter-java = "0.21"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

[profile.dev]
debug = true

[profile.release]
lto = "thin"
codegen-units = 1
