[package]
name = "ir"
description = "Typed Intermediate Representation shared by all compiler passes"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
