[package]
name = "java-compat"
description = "Runtime support types that mirror Java semantics in Rust"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
regex = { workspace = true }
indexmap = "2"
