[package]
name = "tests"
description = "Differential integration tests: Java output vs translated Rust output"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dev-dependencies]
parser = { path = "../parser" }
ir = { path = "../ir" }
typeck = { path = "../typeck" }
codegen = { path = "../codegen" }
java-compat = { path = "../runtime" }
anyhow = { workspace = true }
