[package]
name = "typeck"
description = "Type-checking and symbol-table pass over the IR"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ir = { path = "../ir" }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
